<resources>
    <string name="app_name">FloatPicture</string>
    <string name="application_crash_message">The app encountered an error and will close.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="permission_warn">Permission Warning</string>
    <string name="permission_warn_explanation">The application need this permission to work properly!</string>
    <string name="permission_warn_overlay_explanation">The application need overlay permission to show pictures!</string>
    <string name="permission_warn_storage_intent">Please give storage permission!</string>
    <string name="permission_warn_overlay_intent">Please give overlay permission!</string>
    <string name="adapter_image_description">Picture Preview</string>
    <string name="settings_label">Picture Settings</string>
    <string name="settings_batch_label">Batch Picture Settings</string>
    <string name="settings_general">General Settings</string>
    <string name="settings_picture_name">Picture name</string>
    <string name="settings_picture_name_warn">Please input a correct picture name!</string>
    <string name="settings_picture_name_sum">Use a different picture name to identify pictures.</string>
    <string name="settings_picture_control">Picture Control Settings</string>
    <string name="settings_picture_resize">Resize the picture</string>
    <string name="settings_picture_resize_sum">Scaling the size of window and picture.</string>
    <string name="settings_picture_resize_warn">Please input a correct picture size!</string>
    <string name="settings_picture_resize_size">Size:</string>
    <string name="settings_picture_fit_screen_height">Fill screen height</string>
    <string name="settings_picture_fit_screen_height_sum">Resize the picture to touch the top and bottom of the screen and set Y to 0.</string>
    <string name="settings_picture_fit_screen_height_batch_pending">Will fill screen height after saving.</string>
    <string name="settings_picture_replace">Replace picture</string>
    <string name="settings_picture_replace_sum">Replace the image for this item while keeping current settings.</string>
    <string name="settings_window">Window Settings</string>
    <string name="settings_picture_position_sum">Move the window</string>
    <string name="settings_picture_position">Set window position.</string>
    <string name="settings_picture_position_warn">Please input a correct picture position!</string>
    <string name="settings_picture_position_x">Position X:</string>
    <string name="settings_picture_position_y">Position Y:</string>
    <string name="action_warn_edit_hided_window">You can\'t edit a hided window!</string>
    <string name="action_delete_window">Delete window success!</string>
    <string name="action_add_window">Add window success!</string>
    <string name="action_random_window_success">Random picture window shown.</string>
    <string name="action_random_window_no_candidate">No picture available for random display.</string>
    <string name="action_random_window_failed">Random display failed. Please try again.</string>
    <string name="action_close_all_windows_success">All picture windows closed.</string>
    <string name="action_batch_settings_saved">Batch settings saved.</string>
    <string name="action_batch_edit_no_selection">Select at least one picture first.</string>
    <string name="action_batch_import_failed">No images were imported.</string>
    <string name="new_picture_name">New Picture</string>
    <string name="settings_global_label">Global Settings</string>
    <string name="action_warn_double_click_close_application">Double click to close application.</string>
    <string name="action_back_to_launcher">Back to launcher</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="back_to_launcher">Only back to launcher</string>
    <string name="exit_application">Exit</string>
    <string name="settings_global_start_on_boot">Boot auto run</string>
    <string name="settings_global_start_on_boot_sum">Run application when you boot</string>
    <string name="about">About</string>
    <string name="application_version">Version:</string>
    <string name="author">XFY9326（ClareX）</string>
    <string name="website">https://github.com/XFY9326/FloatPicture</string>
    <string name="application_author">Author:</string>
    <string name="open_source_license">Open Source License</string>
    <string name="copyright">Copyright © 2017 XFY9326.\nAll rights reserved.</string>
    <string name="imageview_app_icon">Application Icon</string>
    <string name="action_warn_manage_list_empty">No Picture is showing now.\nClick + Button to create one.</string>
    <string name="imageview_collapsing_toolbar_head">Collapsing Toolbar</string>
    <string name="settings_global_picture_quality">Picture quality</string>
    <string name="settings_global_picture_quality_sum">Set default new picture quality (Default 80)</string>
    <string name="settings_global_picture_quality_quality">Quality:</string>
    <string name="settings_global_picture_quality_warn">Please input a correct picture quality!</string>
    <string name="application_thank_list">Thanks to all the people who has helped me.</string>
    <string name="error_picture_not_found">Can\'t find picture temp!</string>
    <string name="error_picture_preview_failed">Can\'t load picture preview!</string>
    <string name="settings_picture_alpha">Set picture transparency</string>
    <string name="settings_picture_alpha_sum">Have transparent effects for regular pictures.</string>
    <string name="transparency">Transparency:</string>
    <string name="settings_picture_corner_radius">Round corners</string>
    <string name="settings_picture_corner_radius_sum">Softens rectangular edges with a rounded outline.</string>
    <string name="settings_picture_corner_radius_value">Corner radius:</string>
    <string name="settings_picture_corner_radius_positions">Corners:</string>
    <string name="settings_picture_edge_feather">Edge feather</string>
    <string name="settings_picture_edge_feather_sum">Fade the image edges inward with a transparent transition.</string>
    <string name="settings_picture_edge_feather_value">Feather width:</string>
    <string name="settings_picture_edge_feather_edges">Edges:</string>
    <string name="position_top">Top</string>
    <string name="position_bottom">Bottom</string>
    <string name="position_left">Left</string>
    <string name="position_right">Right</string>
    <string name="position_top_left">Top left</string>
    <string name="position_top_right">Top right</string>
    <string name="position_bottom_left">Bottom left</string>
    <string name="position_bottom_right">Bottom right</string>
    <string name="selection_all">All</string>
    <string name="selection_none">None</string>
    <string name="appearance_summary_format">%1$s / %2$s</string>
    <string name="settings_number_warn">Please input a correct number!</string>
    <string name="main_batch_edit">Edit selected pictures</string>
    <string name="main_batch_select_all">Select all pictures</string>
    <string name="main_batch_select_picture">Select picture for batch edit</string>
    <string name="settings_picture_degree">Set picture show degree</string>
    <string name="settings_picture_degree_sum">Rotate picture to any degree</string>
    <string name="degree">Degree:</string>
    <string name="settings_global_advanced">Advanced Functions</string>
    <string name="settings_global_trusted_overlay_accessibility">Trusted overlay mode</string>
    <string name="settings_global_trusted_overlay_accessibility_sum">Enable the accessibility service to use trusted overlays on Android 12+ without lowering transparency.</string>
    <string name="settings_global_trusted_overlay_accessibility_sum_authorized">Accessibility permission is already granted. If trusted overlays are not active yet, the system will reconnect the service automatically.</string>
    <string name="settings_global_trusted_overlay_accessibility_sum_enabled">Accessibility service is enabled. Floating windows now use trusted overlays when possible.</string>
    <string name="settings_global_trusted_overlay_accessibility_enable_title">Enable trusted overlay mode</string>
    <string name="settings_global_trusted_overlay_accessibility_enable_prompt">Trusted overlay mode relies on the system accessibility permission. The next screen will open Accessibility settings, where you need to enable FloatPicture manually.</string>
    <string name="settings_global_trusted_overlay_accessibility_disable_title">Disable trusted overlay mode</string>
    <string name="settings_global_trusted_overlay_accessibility_disable_prompt">Trusted overlay mode is controlled by the system accessibility permission. The next screen will open Accessibility settings, where you can turn FloatPicture off manually.</string>
    <string name="settings_global_advanced_touchable_position_edit">Touchable position edit</string>
    <string name="settings_global_advanced_touchable_position_edit_sum">Can move picture by fingers to set position.</string>
    <string name="save_moved_position">Save moved position</string>
    <string name="notification_picture_count">%1$s picture window in total.</string>
    <string name="imageview_notification_visible">Set all picture visibility</string>
    <string name="settings_picture_touchable_and_moveable">Touch and move the window</string>
    <string name="settings_picture_touchable_and_moveable_sum">Open it and you can touch and move the picture.Use it carefully!</string>
    <string name="settings_picture_touchable_and_moveable_warn">Please be sure that this picture window is not large and you can still control and close it!\n\nThe position you moved to in edit mode will be the default position of this window.</string>
    <string name="settings_global_show_notification_control">Show notification control board</string>
    <string name="settings_global_show_notification_control_sum">Can set windows\' visibility by this.</string>
    <string name="settings_global_pure_overlay_quick_toggle">Pure overlay quick dot</string>
    <string name="settings_global_pure_overlay_quick_toggle_show">Show pure overlay quick dot</string>
    <string name="settings_global_pure_overlay_quick_toggle_summary_enabled">Enabled, X: %1$d, Y: %2$d</string>
    <string name="settings_global_pure_overlay_quick_toggle_summary_disabled">Disabled, X: %1$d, Y: %2$d</string>
    <string name="restart_to_apply_changes">Restart the application to apply this change!</string>
    <string name="loading">Loading &#8230; &#8230;</string>
    <string name="main_random_window">Random show one picture</string>
    <string name="main_close_all_windows">Close all pictures</string>
    <string name="main_preview_list">Preview</string>
    <string name="main_close_preview_list">Close preview list</string>
    <string name="main_fast_scroll_to_top">Scroll to top</string>
    <string name="main_fast_scroll_to_bottom">Scroll to bottom</string>
    <string name="dialog_close_all_windows_title">Close all picture windows?</string>
    <string name="dialog_close_all_windows_message">This will hide every currently visible picture window.</string>
    <string name="notification_channel">Default</string>
    <string name="notification_channel_des">Default Notification</string>
    <string name="settings_allow_picture_over_layout">Allow picture over layout</string>
    <string name="settings_allow_picture_over_layout_sum">Show picture out of current window</string>
    <string name="accessibility_overlay_service_label">Trusted overlay service</string>
    <string name="accessibility_overlay_service_description">Allows FloatPicture to display trusted floating windows without triggering Android 12 touch security limits.</string>
</resources>
