<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="settings_category_general"
        app:title="@string/settings_general">
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_name"
            app:singleLine="true"
            app:summary="@string/settings_picture_name_sum"
            app:title="@string/settings_picture_name" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_picture_control">
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_resize"
            app:singleLine="true"
            app:summary="@string/settings_picture_resize_sum"
            app:title="@string/settings_picture_resize" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_fit_screen_height"
            app:singleLine="true"
            app:summary="@string/settings_picture_fit_screen_height_sum"
            app:title="@string/settings_picture_fit_screen_height" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_replace"
            app:singleLine="true"
            app:summary="@string/settings_picture_replace_sum"
            app:title="@string/settings_picture_replace" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_degree"
            app:singleLine="true"
            app:summary="@string/settings_picture_degree_sum"
            app:title="@string/settings_picture_degree" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_alpha"
            app:singleLine="true"
            app:summary="@string/settings_picture_alpha_sum"
            app:title="@string/settings_picture_alpha" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_corner_radius"
            app:singleLine="true"
            app:summary="@string/settings_picture_corner_radius_sum"
            app:title="@string/settings_picture_corner_radius" />
        <Preference
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_edge_feather"
            app:singleLine="true"
            app:summary="@string/settings_picture_edge_feather_sum"
            app:title="@string/settings_picture_edge_feather" />
    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_window">
        <Preference
            android:selectAllOnFocus="true"
            app:dependency="settings_picture_touchable_and_moveable"
            app:iconSpaceReserved="false"
            app:key="settings_picture_position"
            app:singleLine="true"
            app:summary="@string/settings_picture_position_sum"
            app:title="@string/settings_picture_position" />
        <SwitchPreferenceCompat
            android:selectAllOnFocus="true"
            app:disableDependentsState="true"
            app:iconSpaceReserved="false"
            app:key="settings_picture_touchable_and_moveable"
            app:singleLine="true"
            app:summary="@string/settings_picture_touchable_and_moveable_sum"
            app:title="@string/settings_picture_touchable_and_moveable" />
        <SwitchPreferenceCompat
            android:selectAllOnFocus="true"
            app:iconSpaceReserved="false"
            app:key="settings_allow_picture_over_layout"
            app:singleLine="true"
            app:summary="@string/settings_allow_picture_over_layout_sum"
            app:title="@string/settings_allow_picture_over_layout" />
    </PreferenceCategory>
</PreferenceScreen>
