<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingStart="6dp"
    android:paddingEnd="6dp">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2.0"
        android:gravity="center"
        android:padding="2dp">

        <ImageView
            android:id="@+id/imageview_notification_application"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/imageview_app_icon"
            app:srcCompat="@mipmap/ic_launcher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5.0"
        android:gravity="center_vertical|start"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="4dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:includeFontPadding="true"
            android:maxLines="1"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/textview_picture_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:includeFontPadding="true"
            android:maxLines="1"
            android:text="@string/notification_picture_count"
            android:textSize="12sp"
            android:typeface="sans" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_notification_toggle"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="0dp">


        <ImageView
            android:id="@+id/imageview_set_picture_view"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:contentDescription="@string/imageview_notification_visible"
            app:srcCompat="@drawable/ic_visible" />

    </LinearLayout>

</LinearLayout>
