<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_dialog_set_pure_overlay_quick_toggle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="18dp"
    android:paddingEnd="24dp"
    android:paddingBottom="12dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/settings_picture_position_x"
        android:textColor="@color/colorPromptText"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekbar_set_pure_overlay_quick_toggle_x"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:progressDrawable="@drawable/seekbar_dialog_progress"
            android:splitTrack="false"
            android:thumb="@drawable/seekbar_dialog_thumb" />

        <EditText
            android:id="@+id/edittext_set_pure_overlay_quick_toggle_x"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:ems="4"
            android:gravity="center"
            android:inputType="number"
            android:labelFor="@+id/edittext_set_pure_overlay_quick_toggle_x"
            android:minHeight="52dp"
            android:singleLine="true"
            android:textColor="@color/colorPromptText"
            android:textColorHint="@color/colorPromptText"
            tools:ignore="Autofill" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:includeFontPadding="false"
        android:text="@string/settings_picture_position_y"
        android:textColor="@color/colorPromptText"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <SeekBar
            android:id="@+id/seekbar_set_pure_overlay_quick_toggle_y"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_weight="1"
            android:progressDrawable="@drawable/seekbar_dialog_progress"
            android:splitTrack="false"
            android:thumb="@drawable/seekbar_dialog_thumb" />

        <EditText
            android:id="@+id/edittext_set_pure_overlay_quick_toggle_y"
            android:layout_width="76dp"
            android:layout_height="wrap_content"
            android:ems="4"
            android:gravity="center"
            android:inputType="number"
            android:labelFor="@+id/edittext_set_pure_overlay_quick_toggle_y"
            android:minHeight="52dp"
            android:singleLine="true"
            android:textColor="@color/colorPromptText"
            android:textColorHint="@color/colorPromptText"
            tools:ignore="Autofill" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkbox_show_pure_overlay_quick_toggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/colorPrimary"
        android:minHeight="48dp"
        android:text="@string/settings_global_pure_overlay_quick_toggle_show"
        android:textColor="@color/colorPromptText"
        android:textSize="15sp" />

</LinearLayout>
